# embryo

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  GenerateVersionHeader.cmake  LICENSE  README.md  conanfile.txt  default.nix  flake.nix  treefmt.toml
include/embryo/: version.h.in
include/embryo/api/: aux_lib.h  basic_api.h  constants.h  lua_state.h  lua_vm.h
include/embryo/bin_chunk/: bin_chunk.h  closure.h  reader.h  writer.h
include/embryo/compiler/: compiler.h
include/embryo/compiler/ast/: block.h  common.h  exp.h  stat.h
include/embryo/compiler/code_gen/: cg_block.h  cg_exp.h  cg_helpers.h  cg_stat.h  code_gen.h  fi_to_proto.h  func_info.h
include/embryo/compiler/lexer/: lexer.h  token.h
include/embryo/compiler/parser/: optimizers.h  parser.h
include/embryo/state/: lua_stack.h  lua_state.h  lua_table.h  lua_value.h
include/embryo/std_lib/: lib_basic.h  lib_coroutine.h  lib_math.h  lib_os.h  lib_package.h  lib_string.h  lib_table.h  str.h
include/embryo/utils/: backtrace.h  bytes.h  chan.h  formatters.h  fpb.h  hashers.h  inspection.h  io.h  numbers.h  sort.h  stringer.h  strings.h  types.h
include/embryo/vm/: constants.h  inst_call.h  inst_load.h  inst_misc.h  inst_operators.h  inst_table.h  inst_up_value.h  instruction.h  opcodes.h
src/api/: lua_state.cc
src/bin_chunk/: bin_chunk.cc  closure.cc  pretty_print.cc  reader.cc  stringers.cc  writer.cc
src/cmd/embryo-compile/: main.cc
src/cmd/embryo-lex/: main.cc
src/cmd/embryo-parse/: main.cc
src/cmd/embryo-sort-benchmark/: main.cc
src/cmd/embryo-undump/: main.cc
src/cmd/embryo-version/: main.cc
src/cmd/embryo-vm/: main.cc
src/compiler/: compiler.cc
src/compiler/ast/: stringers.cc
src/compiler/code_gen/: cg_block.cc  cg_exp.cc  cg_helpers.cc  cg_stat.cc  code_gen.cc  fi_to_proto.cc  func_info.cc
src/compiler/lexer/: lexer.cc  token.cc
src/compiler/parser/: optimizers.cc  parse_block.cc  parse_exp.cc  parse_prefix_exp.cc  parse_stat.cc  parser.cc
src/state/: api_access.cc  api_arith.cc  api_call.cc  api_compare.cc  api_coroutine.cc  api_get.cc  api_misc.cc  api_push.cc  api_set.cc  api_stack.cc  api_vm.cc  aux_lib.cc  lua_stack.cc  lua_state.cc  lua_table.cc  lua_value.cc
src/std_lib/: lib_basic.cc  lib_coroutine.cc  lib_math.cc  lib_os.cc  lib_package.cc  lib_string.cc  lib_table.cc  str.cc
src/utils/: backtrace.cc  bytes.cc  fpb.cc  inspection.cc  io.cc  numbers.cc  sort.cc  strings.cc
src/vm/: inst_call.cc  inst_load.cc  inst_misc.cc  inst_operators.cc  inst_table.cc  inst_up_value.cc  instruction.cc  opcodes.cc  stringers.cc
tests/: lexer.cc
